feat: updateClub
